--- a/cluster-example-superuser.yaml
+++ b/cluster-example-superuser.yaml
@@ -7,4 +7,7 @@ data:
 kind: Secret
 metadata:
   name: cluster-example-superuser
+  labels: {
+    "secret-type" : "database-super-user"
+  }
 type: kubernetes.io/basic-auth
