--- a/cluster-example-app-user.yaml
+++ b/cluster-example-app-user.yaml
@@ -7,4 +7,7 @@ data:
 kind: Secret
 metadata:
   name: cluster-example-app-user
+  labels: {
+    "secret-type" : "app-user"
+  }
 type: kubernetes.io/basic-auth
