Add labels to pgadmin-secret.yaml

--- a/pgadmin-secret.yaml
+++ b/pgadmin-secret.yaml
@@ -3,5 +3,8 @@ kind: Secret
 type: Opaque
 metadata:
   name: pgadmin
+  labels: {
+    "secret-type" : "pgadmin-user"
+  }
 data:
   pgadmin-password: U3VwZXJTZWNyZXQ=
