Add retention policy of 30 days

--- a/cluster-example.yaml
+++ b/cluster-example.yaml
@@ -60,3 +60,4 @@ spec:
         # storageSasToken:
         #   name: azure-creds
         #   key: AZURE_STORAGE_SAS_TOKEN
+    retentionPolicy: "30d"
