--- a/.github/workflows/flyway-info.yml
+++ b/.github/workflows/flyway-info.yml
@@ -1,5 +1,5 @@
 ---
-name: "Flyway Migration Workflow Demonstrator"
+name: "Flyway Info Workflow Demonstrator"
 # Controls when the action will run. Triggers the workflow on push request
 on:
   # Allows you to run this workflow manually from the Actions tab
