--- a/.github/workflows/pyway-info.yml
+++ b/.github/workflows/pyway-info.yml
@@ -29,7 +29,7 @@ jobs:
             - name: Set up Python 3.10
               uses: actions/setup-python@v5
               with:
-                python-version: 3.10
+                python-version: '3.10'
             - name: Run PyWay Info
               run: |
                 echo "Running PyWay Info Workflow Demonstrator"
