--- a/.github/workflows/pyway-info.yml
+++ b/.github/workflows/pyway-info.yml
@@ -28,8 +28,8 @@ jobs:
             # Set up Python 3.10
             - name: Set up Python 3.10
               uses: actions/setup-python@v5
-              with:
-                python-version: '3.10'
+              #with:
+              #  python-version: '3.10'
             - name: Run PyWay Info
               run: |
                 echo "Running PyWay Info Workflow Demonstrator"
