--- a/.github/workflows/pyway-info.yml
+++ b/.github/workflows/pyway-info.yml
@@ -12,7 +12,7 @@ env:
   database_host: localhost
   database_port: 6432
   database_name: app
-  database_migration_dir: sql
+  database_migration_dir: './sql'
   database_table: app.pyway_history
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -41,6 +41,11 @@ jobs:
                 python-version: "3.11"
             - if: ${{ matrix.os == 'ubuntu-arm' }}
               name: Set up Python 3.11 ARM64
+              uses: deadsnakes/action@v3.1.0
+              with:
+                python-version: "3.11"
+            - if: ${{ matrix.os == 'macos-latest' }}
+              name: Set up Python 3.11 MacOS
               uses: deadsnakes/action@v3.1.0
               with:
                 python-version: "3.11"
