--- a/.github/workflows/pyway-info.yml
+++ b/.github/workflows/pyway-info.yml
@@ -12,7 +12,6 @@ env:
   database_host: 4.255.89.123
   database_port: 5432
   database_name: app
-  database_migration_dir: './sql'
   database_table: public.pyway_history
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -57,6 +56,5 @@ jobs:
                 echo "Environment variable database_host: ${{ env.database_host }}"
                 echo "Environment variable database_port: ${{ env.database_port }}"
                 echo "Environment variable database_name: ${{ env.database_name }}"
-                echo "Environment variable database_migration_dir: ${{ env.database_migration_dir }}"
-                pyway info --database-type ${{ env.database_type }} --database-username ${{ env.database_username }} --database-password ${{ env.database_password }} --database-host ${{ env.database_host }} --database-port ${{ env.database_port }} --database-name ${{ env.database_name }} --database-migration-dir ${{ env.database_migration_dir }} --database-table ${{ env.database_table }}
+                pyway info --database-type ${{ env.database_type }} --database-username ${{ env.database_username }} --database-password ${{ env.database_password }} --database-host ${{ env.database_host }} --database-port ${{ env.database_port }} --database-name ${{ env.database_name }} --database-table ${{ env.database_table }}
                 echo "PyWay Info Workflow Demonstrator finished."
