--- a/.github/workflows/pyway-info.yml
+++ b/.github/workflows/pyway-info.yml
@@ -56,6 +56,6 @@
                   echo "Environment variable database_host: ${{ env.database_host }}"
                   echo "Environment variable database_port: ${{ env.database_port }}"
                   echo "Environment variable database_name: ${{ env.database_name }}"
-                  pyway info --database-type ${{ env.database_type }} --database-username ${{ env.database_username }} --database-password ${{ env.database_password }} --database-host ${{ env.database_host }} --database-port ${{ env.database_port }} --database-name ${{ env.database_name }} --database-migration-dir ${{ env.database_migration_dir }} --database-table ${{ env.database_table }}
+                  pyway info --database-type ${{ env.database_type }} --database-username ${{ env.database_username }} --database-password ${{ env.database_password }} --database-host ${{ env.database_host }} --database-port ${{ env.database_port }} --database-name ${{ env.database_name }} --database-table ${{ env.database_table }}
                   echo "PyWay Info Workflow Demonstrator finished."
   
