--- a/.github/workflows/pyway-validate.yml
+++ b/.github/workflows/pyway-validate.yml
@@ -1,5 +1,5 @@
 ---
-    name: "PyWay Info Workflow Demonstrator"
+    name: "PyWay Validate Workflow Demonstrator"
     # Controls when the action will run. Triggers the workflow on push request
     on:
       # Allows you to run this workflow manually from the Actions tab
@@ -15,8 +15,8 @@
       database_table: public.pyway_history
     # A workflow run is made up of one or more jobs that can run sequentially or in parallel
     jobs:
-        # This workflow contains a single job called "pyway_info"
-        pyway_info:
+        # This workflow contains a single job called "pyway_validate"
+        pyway_validate:
             strategy:
                 fail-fast: false
                 matrix:
@@ -38,9 +38,9 @@
                   uses: actions/setup-python@v2
                   with:
                     python-version: "3.12"
-                - name: Run PyWay Info
+                - name: Run PyWay Validate
                   run: |
-                    echo "Running PyWay Info Workflow Demonstrator"
+                    echo "Running PyWay Validate Workflow Demonstrator"
                     echo "Repository: ${{ github.repository }}"
                     echo "GitHub Event Name: ${{ github.event_name }}"
                     echo "GitHub Event Path: ${{ github.event_path }}"
@@ -50,12 +50,12 @@
                     python -m pip install --upgrade pip
                     echo "Installing PyWay"
                     pip install pyway
-                    echo "Running PyWay Info"
+                    echo "Running PyWay Validate"
                     echo "Environment variable database_type: ${{ env.database_type }}"
                     echo "Environment variable database_username: ${{ env.database_username }}"
                     echo "Environment variable database_host: ${{ env.database_host }}"
                     echo "Environment variable database_port: ${{ env.database_port }}"
                     echo "Environment variable database_name: ${{ env.database_name }}"
                     pyway validate --database-type ${{ env.database_type }} --database-username ${{ env.database_username }} --database-password ${{ env.database_password }} --database-host ${{ env.database_host }} --database-port ${{ env.database_port }} --database-name ${{ env.database_name }} --database-table ${{ env.database_table }}
-                    echo "PyWay Info Workflow Demonstrator finished."
+                    echo "PyWay Validate Workflow Demonstrator finished."
     
