--- a/.github/workflows/pyway-info.yml
+++ b/.github/workflows/pyway-info.yml
@@ -1,6 +1,6 @@
 ---
   name: "PyWay Info Workflow Demonstrator"
-  # Controls when the action will run. Triggers the workflow on push request
+  # Controls when the action will run.
   on:
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
