--- a/storage-class.yml
+++ b/storage-class.yml
@@ -2,8 +2,9 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: dev-managed-premium-retain
-provisioner: disk.csi.azure.com
+  name: azure-file-retain-dev
+  namespace: dev
+provisioner: file.csi.azure.com
 parameters:
   skuName: Premium_ZRS
 reclaimPolicy: Retain
